# AndroidProject

./: .gitignore  CMakeLists.txt  premake5.lua
android-project/: settings.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/levels/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
android-project/app/src/main/java/org/libsdl/sdl3project/: SDL3ProjectActivity.java
android-project/app/src/main/res/values/: strings.xml
src/: main_gl.cpp
src/include/: grid.h  renderer.h
src/source/: grid.cpp  renderer.cpp
